--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "TechEdition"
+name: "TechEdition | Techedition.net"
 title: "TechEdition"
-description: "TechEdition is a blog on Internet, SEO , Social Network , blogging , Modern Gadgets and tech News"
+description: "TechEdition is a blog on Internet, SEO , Social Network , blogging , Modern Gadgets and tech News. TecheEdition.net will be sharing educational insights and tips to help you stay updated with the latest advancements in tech. From coding tips to digital marketing trends, we will cover it all"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: 
