--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 name: TechEdition
-title: Techedition | techedition.net
-description: TechEdition is a blog on Internet, SEO , Social Network , blogging , Modern Gadgets and tech News. TecheEdition.net will be sharing educational insights and tips to help you stay updated with the latest advancements in tech. From coding tips to digital marketing trends, we will cover it all.
+title: Techedition | réinventer la technologie
+description: TechEdition is a blog on Internet, SEO , Social Network , blogging , Modern Gadgets and tech News. From coding tips to digital marketing trends, we will cover it all.
 favicon: /assets/images/logo.png
 tags:
   - blog
@@ -38,7 +38,7 @@ instagram_username: techedition
 
 # Posts Settings
 show_time_bar: true
-show_modal_on_exit: false
+show_modal_on_exit: true
 show_modal_on_finish_post: true
 two_columns_layout: true
 
@@ -93,10 +93,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-feed
-  - jekyll-seo-tag
   - jekyll-archives
   - jekyll-admin
-  - jekyll-seo-tag
 
 # Exclude my node related stuff
 exclude: [
