--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ two_columns_layout: true
 
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "https://techedition.net/" # the base hostname & protocol for your site
 google_analytics: "UA-46278016-1"
 language: "en"
 categories_folder: category
@@ -94,7 +94,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-archives
-  - jekyll-admin
 
 # Exclude my node related stuff
 exclude: [
